fix background on mobile

--- a/src/components/Hero/style.css
+++ b/src/components/Hero/style.css
@@ -33,8 +33,6 @@
   flex-direction: column;
   align-items: center;
   width: 100vw;
-  background-image: url("../../assets/HeroBackgroundMobile.png");
-  background-repeat: no-repeat;
   padding-bottom: 600px;
   margin-bottom: -700px;
   max-width: 100vw;
